storyboard and couple blenders

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -35,7 +35,7 @@
 	<div class="buttonGroup">
 		<p><a class="btn btn-primary btn-lg" href="3Dfactory_KvL.html" role="button" target="blank">3D Factory tour</a></p>
 		<p><a class="btn btn-primary btn-lg" href="#" role="button">Business Process Model</a></p>
-		<p><a class="btn btn-primary btn-lg" href="storyboard_KvL2.html" role="button" target="blank">Story board</a></p>
+		<p><a class="btn btn-primary btn-lg" href="storyboard.html" role="button" target="blank">Story board</a></p>
 
 	</div>
 
