data erasure and functional route

--- a/public_html/s2s_factory_v2.html
+++ b/public_html/s2s_factory_v2.html
@@ -1252,7 +1252,14 @@
 								case 67:
 									processJSONRoute("routeLockedLoop.json")
 									break;
-
+// v for functional test
+case 86:
+	processJSONRoute("routeFunctional.json")
+	break;
+	// v for functional test
+	case 66:
+		processJSONRoute("routeDataErasure.json")
+		break;
 							//	case 88: // key x
 							//goToPosition(-49.80, marioHeight, -942.95);
 							// processJSONRoute("routeProcessing.json")
