final 2 routes sold and complete

--- a/public_html/s2s_factory_v2.html
+++ b/public_html/s2s_factory_v2.html
@@ -1272,6 +1272,10 @@ case 86:
 				case 75:
 					processJSONRoute("routeSold.json")
 					break;
+					// h for complete
+					case 75:
+						processJSONRoute("routeComplete.json")
+						break;
 							//	case 88: // key x
 							//goToPosition(-49.80, marioHeight, -942.95);
 							// processJSONRoute("routeProcessing.json")
