resizing and moving some items
preparing for new models

--- a/public_html/s2s_factory_v2.html
+++ b/public_html/s2s_factory_v2.html
@@ -793,18 +793,18 @@
 
 							createBlueShelving(-28.2 * meter, 0, 2 * meter, 0, '0_blueshelf1', addNewBlueShelving);
 							createBlueShelving(-28.2 * meter, 0, 4 * meter, 0, '0_blueshelf2', addNewBlueShelving);
-							createBlueShelvingBox(-28.2 * meter, 0, 8 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
-							createBlueShelvingBox(-28.2 * meter, 0, 6 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
+							createBlueShelvingBox(-27.9 * meter, 0, 8 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
+							createBlueShelvingBox(-27.9* meter, 0, 6 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
 
 							// customer desks
 							createCustomerDesk(-80 * meter, 0, -80 * meter, 0, '0_CustomerDesk', addNewCustomerDesk);
 							// desks in data erasure room
 
 							createWorkstation(-26.5 * meter, 0, 12 * meter, 0, '0_dataeraseD1', addNewStation);
-							createBlueShelving(-27.2 * meter, 0, 8 * meter, 0, '0_blueshelf1', addNewBlueShelving);
-							createBlueShelving(-27.2 * meter, 0, 6 * meter, 0, '0_blueshelf2', addNewBlueShelving);
-							createBlueShelvingBox(-27.2 * meter, 0, 4 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
-							createBlueShelvingBox(-27.2 * meter, 0, 2 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
+							createBlueShelving(-27.3 * meter, 0, 8 * meter, 0, '0_blueshelf1', addNewBlueShelving);
+							createBlueShelving(-27.3 * meter, 0, 6 * meter, 0, '0_blueshelf2', addNewBlueShelving);
+							createBlueShelvingBox(-26.9 * meter, 0, 4 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
+							createBlueShelvingBox(-26.9 * meter, 0, 2 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
 							//recycling bins
 							createRecycleBin(-10 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
 							createRecycleBin(-12 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
@@ -1236,8 +1236,8 @@
 						case 90:
 							processJSONRoute("routeGetItems.json")
 							break;
-							//go from customer to
 
+							//go from customer to L
 							case 76:
 								processJSONRoute("routeItemsArrive.json")
 								break;
