--- a/public_html/s2s_factory_v2.html
+++ b/public_html/s2s_factory_v2.html
@@ -55,9 +55,9 @@
 	<script src="js/vandepart.js"></script>
 	<script src="js/sfdeskprocessing.js"></script>
 	<script src="js/secureStores.js"></script>
-<script src="js/dataErase.js"></script>
-<script src="js/dePrint.js"></script>
-<script src="js/sfdeskPacking.js"></script>
+	<script src="js/dataErase.js"></script>
+	<script src="js/dePrint.js"></script>
+	<script src="js/sfdeskPacking.js"></script>
 
 	<div id="container">
 		<div id="blocker">
@@ -194,8 +194,8 @@
 			var factoryWorkstationPCs = [];
 			var officedeskwithPCs = [];
 			var CustomerDesks = [];
-			var dataErases=[];
-			var sfdeskPackings=[];
+			var dataErases = [];
+			var sfdeskPackings = [];
 
 			/*List of all Persons as a custom objects*/
 			var factoryPersons = [];
@@ -204,15 +204,15 @@
 			var OfficeFems = [];
 			var ShopfloorFems = [];
 			var shopfloorAltMen = [];
-			var sfdeskprocessings =[];
+			var sfdeskprocessings = [];
 			var greySuits = [];
-			var sfdeskonPhones=[];
+			var sfdeskonPhones = [];
 			/*List of all Forklifts as a custom object, see forklift.js*/
 			var factoryForklifts = [];
-var vandeparts = [];
-var vanunloads = [];
+			var vandeparts = [];
+			var vanunloads = [];
 			var factoryBlueShelving = [];
-			var factorysecureStores=[];
+			var factorysecureStores = [];
 
 			var factoryrecyclingBins = [];
 			/*List of all cubes as THREE.Mesh*/
@@ -602,22 +602,6 @@ var vanunloads = [];
 
 							sleep(1500);
 
-
-							/*var _x = instructions.route.path[0].movement.x;
-							var _y = instructions.route.path[0].movement.y;
-							var _z = instructions.route.path[0].movement.z;
-							var _t = instructions.route.path[0].movement.t;
-
-							moveToPosition(_x, _y, _z, _t, function(result) {
-								console.log(result);
-								console.log('x: ' + controls.getObject().position.x + '-- m: ' + controls.getObject().position.x / meter);
-									console.log('y: ' + controls.getObject().position.y+ '-- m: ' + controls.getObject().position.y / meter);
-										console.log('z: ' + controls.getObject().position.z+ '-- m: ' + controls.getObject().position.z / meter);
-
-
-								})*/
-
-
 							///for each movement in the list of instructions
 							var _loopNo = instructions.route.path.length;
 							asyncLoop(_loopNo, function(loop) {
@@ -675,13 +659,19 @@ var vanunloads = [];
 				return;
 			}
 
+			//DISTANCE IN PIXELS
 			function moveToPosition(_nx, _ny, _nz, timeMs, callback) {
 
 
-				var _totalTimeMs = timeMs;
-				var _interval = 20;
+				var _totalTimeMs = parseFloat(timeMs);
+
+				//every '_interval' the character should move
+				var _interval = 50;
+
+				//speed
+				var _speedMeters = 2;
 				//pixels per milliseconds, 25 pixels = 1m
-				var _speed = 40;
+				var _speed = (2 * 25) / 1000;
 
 				//New positions
 				var _newX = _nx;
@@ -696,21 +686,25 @@ var vanunloads = [];
 				var yChange = true;
 				var zChange = true;
 
-				//if (_existX != (_newX)) xChange = true;
-				//if (_existY != (_newY)) yChange = true;
-				//if (_existZ != (_newZ)) zChange = true;
+				//Distance in pixels (converted before this function)
+				var _distanceX = getTDistance(_newX, _existX);
+				var _distanceY = getTDistance(_newY, _existY);
+				var _distanceZ = getTDistance(_newZ, _existZ);
 
-				var _miliSOfMovmentX = Math.abs(getTDistance(_newX, _existX) / _speed) * 1000;
-				var _miliSOfMovmentY = Math.abs(getTDistance(_newY, _existY) / _speed) * 1000;
-				var _miliSOfMovmentZ = Math.abs(getTDistance(_newZ, _existZ) / _speed) * 1000;
+				//Time to travel @ _speed
+				var _miliSOfMovmentX = Math.abs(_distanceX / _speed);
+				var _miliSOfMovmentY = Math.abs(_distanceY / _speed);
+				var _miliSOfMovmentZ = Math.abs(_distanceZ / _speed);
 
-				var _totalStepsX = _miliSOfMovmentX / _interval;
-				var _totalStepsY = _miliSOfMovmentY / _interval;
-				var _totalStepsZ = _miliSOfMovmentZ / _interval;
+				//Number of steps (miliseconds / miliseconds)
+				var _totalStepsX = parseFloat(_miliSOfMovmentX / _interval);
+				var _totalStepsY = parseFloat(_miliSOfMovmentY / _interval);
+				var _totalStepsZ = parseFloat(_miliSOfMovmentZ / _interval);
 
-				var _stepX = (getTDistance(_newX, _existX)) / (_miliSOfMovmentX / _interval);
-				var _stepY = (getTDistance(_newY, _existY)) / (_miliSOfMovmentY / _interval);
-				var _stepZ = (getTDistance(_newZ, _existZ)) / (_miliSOfMovmentZ / _interval);
+				var _stepX = parseFloat(_distanceX / _totalStepsX);
+				var _stepY = parseFloat(_distanceY / _totalStepsY);
+				var _stepZ = parseFloat(_distanceZ / _totalStepsZ);
+
 				console.log(getTDistance(_newX, _existX) + '/' + _totalTimeMs + ' / ' + _interval);
 				var startTime = new Date().getTime();
 				var count = 0;
@@ -724,7 +718,18 @@ var vanunloads = [];
 				console.log('x:' + _totalStepsX + ' y: ' + _totalStepsY + ' z: ' + _totalStepsZ);
 				console.log('xstep:' + _stepX + ' ystep: ' + _stepY + ' zstep: ' + _stepZ);
 				//this function fill fire every '_interval' ms
+
+				var timeXStopMoving = new Date().getTime() + _miliSOfMovmentX;
+				var timeYStopMoving = new Date().getTime() + _miliSOfMovmentY;
+				var timeZStopMoving = new Date().getTime() + _miliSOfMovmentZ;
+
+				var _now = new Date().getTime();
+				var _totalStop = new Date().getTime() + _totalTimeMs;
+
+
 				var interval = setInterval(function() {
+
+					var _now = new Date().getTime();
 
 					if (xChange) {
 						if (_stepCountX >= _totalStepsX) {
@@ -751,14 +756,15 @@ var vanunloads = [];
 						}
 					}
 					if (xStop && yStop && zStop) {
-						clearInterval(interval);
-						callback({
-							status: 'complete'
-						});
-						return;
+						if (_now > _totalStop) {
+							clearInterval(interval);
+							callback({
+								status: 'complete'
+							});
+							return;
+						}
 					}
 					count++
-
 
 				}, _interval);
 
@@ -846,33 +852,34 @@ var vanunloads = [];
 							createWorkstation(-30 * meter, 0, 10 * meter, 0, '0_refurbD2', addNewStation);
 
 							createsfDeskBeard(-30 * meter, 0, 12 * meter, 0, '0_refurbD3', addNewsfdeskBeard);
-							createsfDeskonPhone(-30*meter, 0, 6* meter, 0, '0_refurbd5', addNewssfDeskonPhone);
-							createsfdeskprocessing(-30*meter, 0, 2* meter, 0, '0_refurbd6', addNewsfdeskprocessing);
-							createsfdeskPacking(-30*meter, 0, 0* meter, 0, '0_refurbd7', addNewsfdeskPacking);
+							createsfDeskonPhone(-30 * meter, 0, 6 * meter, 0, '0_refurbd5', addNewssfDeskonPhone);
+							createsfdeskprocessing(-30 * meter, 0, 2 * meter, 0, '0_refurbd6', addNewsfdeskprocessing);
+							createsfdeskPacking(-30 * meter, 0, 0 * meter, 0, '0_refurbd7', addNewsfdeskPacking);
 
 							createBlueShelving(-28.2 * meter, 0, 2 * meter, 0, '0_blueshelf1', addNewBlueShelving);
 							createBlueShelving(-28.2 * meter, 0, 4 * meter, 0, '0_blueshelf2', addNewBlueShelving);
 							createBlueShelvingBox(-27.9 * meter, 0, 8 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
-							createBlueShelvingBox(-27.9* meter, 0, 6 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
-							createsecureStores(-29.9*meter, 0, 10* meter, (-Math.PI), '0_blueshelfwithmMan', addNewsecureStores);
+							createBlueShelvingBox(-27.9 * meter, 0, 6 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
+							createsecureStores(-29.9 * meter, 0, 10 * meter, (-Math.PI), '0_blueshelfwithmMan', addNewsecureStores);
 
 							// customer desks
 							createCustomerDesk(-80 * meter, 0, -80 * meter, 0, '0_CustomerDesk', addNewCustomerDesk);
 							// desks in data erasure room
 
 							createdataErase(-24 * meter, 0, 11.1 * meter, (-Math.PI), '0_dataerase2', addNewdataErase);
-createdePrint(-26.5*meter, 0, 12* meter, (Math.PI/2), '0_dataerasePrint', addNewsfdePrint);
+							createdePrint(-26.5 * meter, 0, 12 * meter, (Math.PI / 2), '0_dataerasePrint', addNewsfdePrint);
 							createBlueShelving(-27.3 * meter, 0, 8 * meter, 0, '0_blueshelf1', addNewBlueShelving);
 							createBlueShelving(-27.3 * meter, 0, 6 * meter, 0, '0_blueshelf2', addNewBlueShelving);
 							createBlueShelvingBox(-26.9 * meter, 0, 4 * meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
 							createBlueShelvingBox(-26.9 * meter, 0, 2 * meter, 0, '0_blueshelft4', addNewBlueShelvingBox);
-							createBlueShelvingBox(-22 * meter, 0, 2 * meter, 0, '0_blueshelft6', addNewBlueShelvingBox);createBlueShelvingBox(-26.9 * meter, 0, 2 * meter, 0, '0_blueshelft4', addNewBlueShelvingBox);
+							createBlueShelvingBox(-22 * meter, 0, 2 * meter, 0, '0_blueshelft6', addNewBlueShelvingBox);
+							createBlueShelvingBox(-26.9 * meter, 0, 2 * meter, 0, '0_blueshelft4', addNewBlueShelvingBox);
 							createBlueShelvingBox(-26.9 * meter, 0, 0 * meter, 0, '0_blueshelft6', addNewBlueShelvingBox);
 							createBlueShelvingBox(-26.9 * meter, 0, -2 * meter, 0, '0_blueshelft5', addNewBlueShelvingBox);
 							createBlueShelvingBox(-22 * meter, 0, 0 * meter, 0, '0_blueshelft5', addNewBlueShelvingBox);
 
 							//recycling bins
-							createRecycleBin(-10 * meter, 0, 12 * meter, (-Math.PI/2), '0_bin1', addNewrecycleBin);
+							createRecycleBin(-10 * meter, 0, 12 * meter, (-Math.PI / 2), '0_bin1', addNewrecycleBin);
 							// createRecycleBin(-12 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
 							//<!--createRecycleBin(-14 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
 							//<!--createRecycleBin(-16 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
@@ -912,16 +919,16 @@ createdePrint(-26.5*meter, 0, 12* meter, (Math.PI/2), '0_dataerasePrint', addNew
 							createsecureStores(-9.3 * meter, 0, 38 * meter, (Math.PI / 2), '0_secureStore1', addNewsecureStores);
 							createBlueShelving(-12.2 * meter, 0, 39.8 * meter, (-Math.PI / 2), '0_blueshelf20', addNewBlueShelving);
 							createBlueShelving(-15.2 * meter, 0, 39.8 * meter, (-Math.PI / 2), '0_blueshelf21', addNewBlueShelving);
-createBlueShelvingBox(-12.2 * meter, 0, 36.8 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
-createBlueShelvingBox(-15.2 * meter, 0, 36.8 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
-createBlueShelvingBox(-9.3 * meter, 0, 34.2 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
-createBlueShelvingBox(-12.2 * meter, 0, 34.2 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
-createBlueShelvingBox(-15.2 * meter, 0, 34.2 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
-createBlueShelvingBox(-9.3 * meter, 0, 32 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
-createBlueShelvingBox(-12.2 * meter, 0, 32 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
-createBlueShelvingBox(-15.2 * meter, 0, 32 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
+							createBlueShelvingBox(-12.2 * meter, 0, 36.8 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
+							createBlueShelvingBox(-15.2 * meter, 0, 36.8 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
+							createBlueShelvingBox(-9.3 * meter, 0, 34.2 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
+							createBlueShelvingBox(-12.2 * meter, 0, 34.2 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
+							createBlueShelvingBox(-15.2 * meter, 0, 34.2 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
+							createBlueShelvingBox(-9.3 * meter, 0, 32 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
+							createBlueShelvingBox(-12.2 * meter, 0, 32 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
+							createBlueShelvingBox(-15.2 * meter, 0, 32 * meter, (-Math.PI / 2), '0_blueshelf14', addNewBlueShelvingBox);
 
-						//shopfloor person stores
+							//shopfloor person stores
 							createShopfloorFem(10 * meter, 0, 33 * meter, 0, '0_shopfloorperson1', addNewShopfloorFem);
 
 							//blue shelving refurbRoom
@@ -947,7 +954,7 @@ createBlueShelvingBox(-15.2 * meter, 0, 32 * meter, (-Math.PI / 2), '0_blueshelf
 							createLorry(23 * meter, 0, -31.5 * meter, (-Math.PI / 2), '0_lorryBay1', addNewLorry);
 							//van in bay 2
 							createvanunload(14 * meter, 0, -31.5 * meter, (Math.PI / 2), '0_vanBay2', addNewvanunload);
-createvandepart(6*meter, 0, -31.5*meter, (-Math.PI/2), '0_vanBay3', addNewvandepart);
+							createvandepart(6 * meter, 0, -31.5 * meter, (-Math.PI / 2), '0_vanBay3', addNewvandepart);
 
 							//toilets accessed from shopfloor
 							createToilet(-28.5 * meter, 0, 26.5 * meter, (-Math.PI / 2), '0_toiletShopfloor1', addNewToilet);
@@ -1310,50 +1317,50 @@ createvandepart(6*meter, 0, -31.5*meter, (-Math.PI/2), '0_vanBay3', addNewvandep
 							//goToPosition(-49.80, marioHeight, -942.95);
 							processJSONRoute("route1.json")
 							break;
-//go to position from sales to shopfloor to lorry to customer press z
+							//go to position from sales to shopfloor to lorry to customer press z
 						case 90:
 							processJSONRoute("routeGetItems.json")
 							break;
 
 							//go from customer to L
-							case 76:
-								processJSONRoute("routeItemsArrive.json")
-								break;
+						case 76:
+							processJSONRoute("routeItemsArrive.json")
+							break;
 							//goToPosition(-49.80, marioHeight, -942.95);
 							//	processJSONRoute("routeItemsArrive.json")
 							//	break;
 							// press x for processing route
-							case 88:
-								processJSONRoute("routeProcessing.json")
-								break;
-								//  c for locked route
-								case 67:
-									processJSONRoute("routeLockedLoop.json")
-									break;
-// v for functional test
-case 86:
-	processJSONRoute("routeFunctional.json")
-	break;
-	// b for data erasure
-	case 66:
-		processJSONRoute("routeDataErasure.json")
-		break;
-		// f for value est
-		case 70:
-			processJSONRoute("routeValueEst.json")
-			break;
-			// g for blind bidding
-			case 71:
-				processJSONRoute("routeBlindBid.json")
-				break;
-				// k for sold
-				case 75:
-					processJSONRoute("routeSold.json")
-					break;
-					// h for complete
-					case 72:
-						processJSONRoute("routeComplete.json")
-						break;
+						case 88:
+							processJSONRoute("routeProcessing.json")
+							break;
+							//  c for locked route
+						case 67:
+							processJSONRoute("routeLockedLoop.json")
+							break;
+							// v for functional test
+						case 86:
+							processJSONRoute("routeFunctional.json")
+							break;
+							// b for data erasure
+						case 66:
+							processJSONRoute("routeDataErasure.json")
+							break;
+							// f for value est
+						case 70:
+							processJSONRoute("routeValueEst.json")
+							break;
+							// g for blind bidding
+						case 71:
+							processJSONRoute("routeBlindBid.json")
+							break;
+							// k for sold
+						case 75:
+							processJSONRoute("routeSold.json")
+							break;
+							// h for complete
+						case 72:
+							processJSONRoute("routeComplete.json")
+							break;
 							//	case 88: // key x
 							//goToPosition(-49.80, marioHeight, -942.95);
 							// processJSONRoute("routeProcessing.json")
